# d2py

./: .buildinfo  .gitignore  .pdm-python  .readthedocs.yml  CODE_OF_CONDUCT.html  CONTRIBUTING.html  README.md  SECURITY.html  SECURITY.md  dev-environment.yml  genindex.html  index.html  notebook.html  objects.inv  posts.html  py-modindex.html  pyproject.toml  readthedocs.yml  search.html  searchindex.js  setup.py  tasks.py
.doctrees/: CODE_OF_CONDUCT.doctree  CONTRIBUTING.doctree  SECURITY.doctree  environment.pickle  index.doctree
.doctrees/about/: feature.doctree  index.doctree  use.doctree
.doctrees/algebra/: index.doctree  intro.doctree
.doctrees/analysis/: index.doctree
.doctrees/api/: d2py.utils.file.mkdir.doctree  d2py.utils.unzip.decode_path.doctree  d2py.utils.unzip.extract.doctree  d2py.utils.unzip.extract_all.doctree
.doctrees/chaos/: index.doctree
.doctrees/news/: index.doctree
.doctrees/posts/: index.doctree
.doctrees/python-study/: demo.doctree  index.doctree
.doctrees/reference/: index.doctree  utils.doctree
.github/workflows/: deploy.yml  nuitka-ubuntu.yml  nuitka.yml  pages.yml  pdm.yml  python-publish.yml  sphinx.yml
FunctionalAnalysis/: abc.html  annotations.html  index.html  typing.html
FunctionalAnalysis/draft/: abc.html  annotations.html  descriptor.html  index.html  typing.html
GUI/: index.html
_sources/: CODE_OF_CONDUCT.md.txt  index.md.txt  notebook.ipynb.txt
_sources/FunctionalAnalysis/: abc.md.txt
_sources/analysis/: index.md.txt
_sources/api/: d2py.utils.unzip.extract_all.rst.txt
_static/: documentation_options.js
about/: feature.html  index.html  use.html
algebra/: index.html  intro.html
analysis/: index.html
api/: d2py.utils.file.mkdir.html  d2py.utils.unzip.decode_path.html  d2py.utils.unzip.extract.html  d2py.utils.unzip.extract_all.html
chaos/: index.html
d2py/: __init__.py
deploy/: index.html  other.html  packaging.html
doc/: .gitignore  .jupyterlite.doit.db  _head.py  compiler.md  conf.py  environment.yml  index.md  math.md  overrides.json  project.ipynb  refs.bib  set_env.py
docs/: .gitignore  conf.py  index.md  pyproject.toml  requirements.txt
docs/FunctionalAnalysis/: index.md
docs/about/: feature.md  index.md
docs/analysis/: index.md
docs/analysis/draft/: annotations.ipynb  index.md
docs/chaos/deploy/pdm/: index.md  intro.md
docs/chaos/deploy/pdm/plugin/: write.md
docs/deploy/: index.md  packaging.md
docs/deploy/pdm/usage/: dependency.md  index.md
docs/drafts/: 101.md
docs/locales/zh_CN/LC_MESSAGES/: CODE_OF_CONDUCT.po  index.po
docs/locales/zh_CN/LC_MESSAGES/about/: index.po
docs/locales/zh_CN/LC_MESSAGES/api/: d2py.utils.unzip.decode_path.po  d2py.utils.unzip.extract.po
docs/pip-env/: hs_udata.txt
docs/posts/basic/: python-intro.md
docs/posts/hs/: udata.md
docs/posts/hs/data/: 股票列表.csv  股票列表.txt  股票列表.xlsx
docs/python-study/basic/: argparse.ipynb  controlflow.ipynb  controlflow.md  function.ipynb  index.md  interface.ipynb  logging.md  modules.ipynb  template.ipynb
docs/python-study/basic/container/: dict.ipynb  index.md  sequence.ipynb  set.ipynb
docs/python-study/basic/examples/argparse/: square.py
docs/python-study/basic/intro/: understand-python.md
docs/python-study/drafts/: 88.md  class.md  exc.md  file.md  oop.md  type.md  爬虫.md
docs/python-study/faqs/: index.md
docs/python-study/refs/: terms.md
docs/python-study/refs/glossary/: identifier.md
docs/python-study/topics/: refs.md
docs/reference/: index.rst
docs/reference/utils/: file.rst  index.rst  unzip.rst
docs/tutorial/: index.md  typing.ipynb
drafts/: 101.html  11.html  22.html  33.html  44.html  55.html  66.html  88.html  class.html  draft.html  exc.html  file.html  index.html  iter.html  math.html  oop.html  op.html  re.html  socket.html  str.html  type.html  爬虫.html
news/: index.html
posts/: 2021.html  archive.html  atom.xml  author.html  category.html  drafts.html  index.html  language.html  tag.html
python-study/: demo.html  index.html
reference/: index.html  utils.html
tests/: image_utils.py  main.ipynb
tests/gym-multigrid/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
tests/gym-multigrid/gym_multigrid/: __init__.py  multigrid.py  typing.py
tests/gym-multigrid/gym_multigrid/core/: agent.py  constants.py  grid.py  object.py  world.py
tests/gym-multigrid/gym_multigrid/envs/: __init__.py  collect_game.py  ctf.py  maze.py
tests/gym-multigrid/gym_multigrid/policy/: base.py
tests/gym-multigrid/gym_multigrid/policy/ctf/: heuristic.py  utils.py
tests/gym-multigrid/gym_multigrid/utils/: map.py  misc.py  rendering.py  window.py
tests/gym-multigrid/gym_multigrid/wrappers/: toroid.py
tests/gym-multigrid/scripts/: main_mvn_ctf_rl.py
tests/gym-multigrid/tests/: test_collect.py  test_ctf.py  test_maze.py
tests/gym-multigrid/tests/assets/: board.txt  board_maze.txt
tutorial/: annotations.html  index.html  typing.html
web/: index.html
(+1014 files in other folders)
