[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core"]

[project]
authors = [{name = "xinetzone", email = "735613050@qq.com"}]
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
license = {file = "LICENSE"}
name = "tao"
readme = "README.md"
requires-python = ">=3.10"

dependencies = []

maintainers = [
  {name = "xinetzone", email = "735613050@qq.com"},
]

[project.urls]
Home = "https://github.com/xinetzone/tao"

[project.optional-dependencies]
doc = [
  "myst-nb",
  "xyzstyle",
  "sphinx-copybutton",
  # "sphinxcontrib-bibtex",
  "sphinx-thebe",
  "sphinx-design",
  "sphinx-automodapi",
  "sphinx-sitemap",
  "sphinx-comments",
  "invoke",
  "sphinx-autoapi",
]

dev = [
  "pdm",
  "pygame",
  "PyGithub[integrations]",
  "bytecode",
  "numpy",
  "toml",
  "fsspec",
  "pyarrow",
  "invoke",
  "openpyxl",
  "rich[jupyter]",
  "grpcio",
  "absl-py",
  "ping3",
  "paramiko",
  "tables",
]

gui = [
  "PySide6",
]

[tool.flit.module]
name = "tao"

[tool.flit.sdist]
# include = ["doc/"]
exclude = ['doc', '.git', '.github', 'output']

[pypi.extra]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
# verify_ssl = false
