[project]
name = ""
version = ""
description = ""
authors = [
    {name = "xinetzone", email = "xinzone@outlook.com"},
]
dependencies = ["ablog", "myst-nb", "sphinx-thebe", "sphinx-copybutton", "sphinx-comments", "plotly", "pandas", "matplotlib", "sphinx-book-theme>=0.1.6", "sphinx>=4.2", "sphinxcontrib-mermaid", "sphinx-panels", "sphinx-inline-tabs"]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
# url = "https://pypi.tuna.tsinghua.edu.cn/simple"
# verify_ssl = true

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
